FRAME - Continuá el anterior. -  TODO: Estilos.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ assets/styles/libs/jeet/
 assets/styles/libs/normalize/
 debug.log
 .svn
+sales/js/concat/
+sales/js/lib/libs.js
+sales/modules/*/js/concat/
