--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-cli": "^1.2.2",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.1",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
