--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,6 @@ debug.log
 sales/js/concat/
 sales/js/lib/libs.js
 sales/modules/*/js/concat/
-sales/modules/*/referidos/css/
+sales/modules/*/css/
 sales/styles/libs/
 sales/css/libs-concat.min.css
