GULP - Se eliminó la tarea de copiar settings y fbin a deploy. - Se fixeo el problema de sass al querer deployar. - Se opctimizó la tarea de sass en dev
MODULE
- Se importan los estilos globales en cada módulo.
- Se elimina de inicio.html la llamada a los estilos globales.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ debug.log
 sales/js/concat/
 sales/js/lib/libs.js
 sales/modules/*/js/concat/
-sales/modules/*/css/
+sales/modules/*/css/*
 sales/styles/libs/
 sales/css/libs-concat.min.css
+*.map
+sales/styles/libs
